# haskell-nix-repro

./: cabal.project  flake.nix  repro.cabal
