cabal-version: 2.4
name:
  repro
version:
  0.1
author:
  chessai
maintainer:
  chessai1996@gmail.com

library
  exposed-modules:
    MyLib
  build-depends:
    , base
    , Win32-network
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable repro
  main-is:
    Main.hs
  build-depends:
    , base
    , repro
  hs-source-dirs:
    app
  default-language:
    Haskell2010
